@@ -4,11 +4,11 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.12.RELEASE'
-  id 'org.springframework.boot' version '2.5.14'
+  id 'org.springframework.boot' version '2.7.3'
   id 'org.owasp.dependencycheck' version '7.1.1'
   id 'com.github.ben-manes.versions' version '0.42.0'
   id 'org.sonarqube' version '3.3'
-  id 'org.flywaydb.flyway' version '8.5.11'
+  id 'org.flywaydb.flyway' version '9.3.0'
 }
 
 group = 'uk.gov.hmcts.dts'
@@ -178,9 +178,16 @@ dependencyManagement {
     dependencySet(group: 'commons-io', version: '2.11.0') {
       entry 'commons-io'
     }
+    // solves CVE-2022-25857
+    dependencySet(
+      group: 'org.yaml',
+      version: '1.33'
+    ) {
+      entry 'snakeyaml'
+    }
   }
   imports {
-    mavenBom "org.springframework.cloud:spring-cloud-dependencies:2020.0.4"
+    mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.3"
   }
 }
 
@@ -188,6 +195,9 @@ repositories {
   mavenLocal()
   jcenter()
   mavenCentral()
+  maven {
+    url 'https://jitpack.io'
+  }
 }
 
 def versions = [
@@ -195,7 +205,7 @@ def versions = [
   junitPlatform   : '1.8.2',
   reformLogging   : '5.1.5',
   springBoot      : springBoot.class.package.implementationVersion,
-  springfoxSwagger: '2.9.2'
+  springfoxSwagger: '3.0.0'
 ]
 
 ext.libraries = [
@@ -217,7 +227,7 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.3'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.4'
   implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.7.2'
   implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.7.2'
 
@@ -230,16 +240,16 @@ dependencies {
   implementation group: 'org.flywaydb', name: 'flyway-core'
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.4.1'
 
-  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.9.2'
+  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.10.2'
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.18.0'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.18.0'
 
   implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.65'
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.65'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.0.23'
 
-  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.3'
-  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.14.0-rc1'
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0-rc1'
   implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.13.3', ext: 'pom'
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.3'
 
@@ -250,6 +260,7 @@ dependencies {
 
   implementation group: 'io.github.resilience4j', name: 'resilience4j-spring-boot2', version: '1.7.0'
 
+  testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
     exclude group: 'junit', module: 'junit'
@@ -317,4 +328,10 @@ task migratePostgresDatabase(type: FlywayMigrateTask) {
   if (project.hasProperty("dburl")) {
     url = "jdbc:postgresql://${dburl}"
   }
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
